--- a/index-CK.html
+++ b/index-CK.html
@@ -55,142 +55,62 @@
                     <p class="text">Để được đón tiếp ưu tiên tại bệnh viện và được tư vấn với bác sĩ giỏi</p>
                     <div class="search">
                         <i class="uil uil-search"></i>
-                        <input type="text" placeholder="Tìm triệu chứng, chuyên khoa, tên bác sĩ ...">
+                        <input type="text" placeholder="Tên dịch vụ, mô tả dịch vụ">
                     </div>
                 </div>
             </sub-section>
-            <sub-section class="doctor">
+            <sub-section class="service">
                 <div class="container">
-                    <div class="doctor-header">
-                        <h2>Chọn bác sĩ</h2>
+                    <div class="service-header">
+                        <h2>Chọn dịch vụ đặt khám</h2>
                         <div class="filter">                         
                         </div>
                     </div>
-                    <div class="doctor-list">
-                        <div class="dr-card">
-                            <div class="dr-image">
+                    <div class="service-list">
+                        <a class="service-card">
+                            <div class="service-image">
                             </div>
-                            <div class="dr-info">
-                                <h3><a href="#" class="dr-link">PGS.TS Đỗ Thùy Dương</a></h3>
-                                <p class="khoa">Chuyên khoa Tai Mũi Họng</p>
+                            <div class="service-info">
+                                <h3><p class="name">Gói khám tổng quát răng, hàm</p></h3>
+                                <p class="khoa">Chuyên khoa Răng Hàm Mặt</p>
                                 <p class="cost">Giá khám : <span>500.000đ</span></p>
-                                <a href="#" class="btn secondary-btn">
-                                    <i class="uil uil-stethoscope-alt"></i>
-                                    Đặt khám
-                                </a>
                             </div>
-                        </div>
-                        <div class="dr-card">
-                            <div class="dr-image">
-                                <!-- <img src="./assets/doctor1.jpg" alt=""> -->
+                            <i class="uil uil-arrow-right"></i>
+                        </a>
+                        
+                        <a class="service-card">
+                            <div class="service-image">
                             </div>
-                            <div class="dr-info">
-                                <h3><a href="#" class="dr-link">PGS.TS Đỗ Thùy Dương</a></h3>
-                                <p class="khoa">Chuyên khoa Tai Mũi Họng</p>
+                            <div class="service-info">
+                                <h3><p class="name">Gói khám Nội soi dạ dày, thực quản, tá tràng</p></h3>
+                                <p class="khoa">Chuyên khoa Tiêu Hóa</p>
                                 <p class="cost">Giá khám : <span>500.000đ</span></p>
-                                <a href="#" class="btn secondary-btn">
-                                    <i class="uil uil-stethoscope-alt"></i>
-                                    Đặt khám
-                                </a>
                             </div>
-                        </div>
-                        <div class="dr-card">
-                            <div class="dr-image">
-                                <!-- <img src="./assets/doctor1.jpg" alt=""> -->
+                            <i class="uil uil-arrow-right"></i>
+                        </a>
+                        
+
+                        <a class="service-card">
+                            <div class="service-image">
                             </div>
-                            <div class="dr-info">
-                                <h3><a href="#" class="dr-link">PGS.TS Đỗ Thùy Dương</a></h3>
-                                <p class="khoa">Chuyên khoa Tai Mũi Họng</p>
+                            <div class="service-info">
+                                <h3><p class="name">Gói khám và siêu âm 4D tuyến giáp</p></h3>
+                                <p class="khoa">Chuyên khoa Ung Bướu</p>
                                 <p class="cost">Giá khám : <span>500.000đ</span></p>
-                                <a href="#" class="btn secondary-btn">
-                                    <i class="uil uil-stethoscope-alt"></i>
-                                    Đặt khám
-                                </a>
                             </div>
-                        </div>
-                        <div class="dr-card">
-                            <div class="dr-image">
-                                <!-- <img src="./assets/doctor1.jpg" alt=""> -->
+                            <i class="uil uil-arrow-right"></i>
+                        </a>
+
+                        <a class="service-card">
+                            <div class="service-image">
                             </div>
-                            <div class="dr-info">
-                                <h3><a href="#" class="dr-link">PGS.TS Đỗ Thùy Dương</a></h3>
-                                <p class="khoa">Chuyên khoa Tai Mũi Họng</p>
+                            <div class="service-info">
+                                <h3><p class="name">Gói khám và siêu âm thai</p></h3>
+                                <p class="khoa">Chuyên khoa Sản Phụ</p>
                                 <p class="cost">Giá khám : <span>500.000đ</span></p>
-                                <a href="#" class="btn secondary-btn">
-                                    <i class="uil uil-stethoscope-alt"></i>
-                                    Đặt khám
-                                </a>
                             </div>
-                        </div>
-                        <div class="dr-card">
-                            <div class="dr-image">
-                                <!-- <img src="./assets/doctor1.jpg" alt=""> -->
-                            </div>
-                            <div class="dr-info">
-                                <h3><a href="#" class="dr-link">PGS.TS Đỗ Thùy Dương</a></h3>
-                                <p class="khoa">Chuyên khoa Tai Mũi Họng</p>
-                                <p class="cost">Giá khám : <span>500.000đ</span></p>
-                                <a href="#" class="btn secondary-btn">
-                                    <i class="uil uil-stethoscope-alt"></i>
-                                    Đặt khám
-                                </a>
-                            </div>
-                        </div>
-                        <div class="dr-card">
-                            <div class="dr-image">
-                                <!-- <img src="./assets/doctor1.jpg" alt=""> -->
-                            </div>
-                            <div class="dr-info">
-                                <h3><a href="#" class="dr-link">PGS.TS Đỗ Thùy Dương</a></h3>
-                                <p class="khoa">Chuyên khoa Tai Mũi Họng</p>
-                                <p class="cost">Giá khám : <span>500.000đ</span></p>
-                                <a href="#" class="btn secondary-btn">
-                                    <i class="uil uil-stethoscope-alt"></i>
-                                    Đặt khám
-                                </a>
-                            </div>
-                        </div>
-                        <div class="dr-card">
-                            <div class="dr-image">
-                                <!-- <img src="./assets/doctor1.jpg" alt=""> -->
-                            </div>
-                            <div class="dr-info">
-                                <h3><a href="#" class="dr-link">PGS.TS Đỗ Thùy Dương</a></h3>
-                                <p class="khoa">Chuyên khoa Tai Mũi Họng</p>
-                                <p class="cost">Giá khám : <span>500.000đ</span></p>
-                                <a href="#" class="btn secondary-btn">
-                                    <i class="uil uil-stethoscope-alt"></i>
-                                    Đặt khám
-                                </a>
-                            </div>
-                        </div>
-                        <div class="dr-card">
-                            <div class="dr-image">
-                                <!-- <img src="./assets/doctor1.jpg" alt=""> -->
-                            </div>
-                            <div class="dr-info">
-                                <h3><a href="#" class="dr-link">PGS.TS Đỗ Thùy Dương</a></h3>
-                                <p class="khoa">Chuyên khoa Tai Mũi Họng</p>
-                                <p class="cost">Giá khám : <span>500.000đ</span></p>
-                                <a href="#" class="btn secondary-btn">
-                                    <i class="uil uil-stethoscope-alt"></i>
-                                    Đặt khám
-                                </a>
-                            </div>
-                        </div>
-                        <div class="dr-card">
-                            <div class="dr-image">
-                                <!-- <img src="./assets/doctor1.jpg" alt=""> -->
-                            </div>
-                            <div class="dr-info">
-                                <h3><a href="#" class="dr-link">PGS.TS Đỗ Thùy Dương</a></h3>
-                                <p class="khoa">Chuyên khoa Tai Mũi Họng</p>
-                                <p class="cost">Giá khám : <span>500.000đ</span></p>
-                                <a href="#" class="btn secondary-btn">
-                                    <i class="uil uil-stethoscope-alt"></i>
-                                    Đặt khám
-                                </a>
-                            </div>
+                            <i class="uil uil-arrow-right"></i>
+                        </a>
                         </div>
                     </div>
                 </div>
