--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                         <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/ava-users.png">
                         <i class="uil uil-angle-down"></i>
                     </div>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -45,6 +46,14 @@
                     <a href="#" class="nav-link">Sản phẩm y tế</a>
                 </div>
                 <div id="menu-btn"><i class="uil uil-bars"></i></div>
+                <div class="menu-profile-tab">
+                    <a href="#" class="menu-opt"><i class="uil uil-user"></i>Hồ sơ cá nhân</a>
+                    <a href="#" class="menu-opt"><i class="uil uil-schedule"></i>Lịch sử đặt khám</a>
+                    <a href="#" class="menu-opt"><i class="uil uil-shopping-cart"></i>Đơn hàng</a>
+                    <a href="#" class="menu-opt"><i class="uil uil-question-circle"></i>Câu hỏi của tôi</a>
+                    <a href="#" class="menu-opt"><i class="uil uil-keyhole-circle"></i>Đổi mật khẩu</a>
+                    <a href="#" class="menu-opt"><i class="uil uil-signout"></i>Đăng xuất</a>
+                    
             </div>
         </nav>
     </header>
