--- a/index-DR.html
+++ b/index-DR.html
@@ -15,34 +15,45 @@
 <body>
     <header>
         <nav class="info">
-            <ul>
-                <li>
-                    <i class="uil uil-phone"></i> Hotline đặt khám : 
-                </li>
-                <li>
-                    <a href="#" class="login">Đăng nhập</a> | <a href="#" class="login">Đăng ký</a>
-                </li>
-            </ul>
+            <div class="container">
+                <div class="hotline"><i class="uil uil-phone"></i> Hotline đặt khám : </div>
+                <div class="profile-tab">
+                    <span class="username">Đỗ Thùy Dương</span>
+                    <div class="user-ava" id="user-ava">
+                        <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/ava-users.png">
+                        <i class="uil uil-angle-down"></i>
+                    </div>
+                    </div>
+                </div>
+            </div>
         </nav>
-        <nav class="container">
-            <a href="#" class="logo">
-                <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/ava_v2.png" title="Booking Health Care Web"/>
-            </a>
-            <div class="links">
-                <ul>
-                    <li>
-                        <a href="#" class="nav-link">Đặt khám</a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link">Hồ sơ sức khỏe</a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link">Hỏi đáp bác sĩ</a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link">Dịch vụ khẩn cấp</a>
-                    </li>
-                </ul>
+        <nav class="nav-bar">
+            
+            <div class="container">
+                <a href="#" class="logo">
+                    <img src="./assets/ava_v2.png" title="Booking Health Care Web"/>
+                </a>
+                <div class="links">
+                    <a class="nav-link" id="nav-booking">Đặt khám <i class="uil uil-angle-down"></i></a>
+                    <a href="#" class="nav-link">Hồ sơ cá nhân</a>
+                    <a href="#" class="nav-link">Hỏi đáp bác sĩ</a>
+                    <a href="#" class="nav-link">Sản phẩm y tế</a>
+                    <div class="menu-booking-opt">
+                        <a href="#" class="booking-opt">Bác sĩ</a>
+                        <a href="#" class="booking-opt">Gói khám</a>
+                    </div>
+                </div>
+                <div id="menu-btn"><i class="uil uil-bars"></i></div>
+
+                <div class="menu-profile-tab">
+                    <a href="#" id="menu-opt"><i class="uil uil-user"></i>Hồ sơ cá nhân</a>
+                    <a href="#" id="menu-opt"><i class="uil uil-schedule"></i>Lịch sử đặt khám</a>
+                    <a href="#" id="menu-opt"><i class="uil uil-shopping-cart"></i>Đơn hàng</a>
+                    <a href="#" id="menu-opt"><i class="uil uil-question-circle"></i>Câu hỏi của tôi</a>
+                    <a href="#" id="menu-opt"><i class="uil uil-keyhole-circle"></i>Đổi mật khẩu</a>
+                    <a href="#" id="menu-opt"><i class="uil uil-signout"></i>Đăng xuất</a>
+                </div>
+
             </div>
         </nav>
     </header>
