--- a/login.html
+++ b/login.html
@@ -17,69 +17,73 @@
 </head>
 
 <body>
+
     <main>
         <div class="box">
-            <div class="inner-box">
-                <div class="forms-wrap">
-                    <form action="index.html" autocomplete="off" class="sign-in-form">
-                        <div class="logo">
-                            <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/ava_v2.png" alt="">
+          <div class="inner-box">
+            <div class="forms-wrap">
+                <form action="index.html" autocomplete="off" class="sign-in-form">
+                    <div class="logo">
+                        <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/ava_v2.png" alt="">
+                    </div>
+
+                    <div class="heading">
+                        <h2>Chào mừng bạn trở lại</h2>
+                        <h6>Bạn chưa đăng ký ?</h6>
+                        <a href="#" class="toggle">Đăng ký</a>
+                    </div>
+
+                    <div class="info-form">
+                        <div class="input-wrap">
+                            <input type="text" minlength="4" class="input-field" autocomplete="off" required>
+                            <label for="">Tên đăng nhập</label>
                         </div>
 
-                        <div class="heading">
-                            <h2>Chào mừng bạn trở lại</h2>
-                            <h6>Bạn chưa đăng ký ?</h6>
-                            <a href="#" class="sign-up">Đăng ký</a>
+                        <div class="input-wrap">
+                            <input type="password" minlength="4" class="input-field" autocomplete="off" required>
+                            <label for="">Mật khẩu</label>
                         </div>
 
-                        <div class="info-form">
-                            <div class="input-wrap">
-                                <input type="text" minlength="4" class="input-field" autocomplete="off" required>
-                                <label for="">Tên đăng nhập</label>
-                            </div>
+                        <input type="submit" value="Đăng nhập" class="sign-btn btn">
+                        <a href="" class="text">Quên mật khẩu</a>
+                    </div>
+                </form>
+                <form action="index.html" autocomplete="off" class="sign-up-form">
+                    <div class="logo">
+                        <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/ava_v2.png" alt="">
+                    </div>
 
-                            <div class="input-wrap">
-                                <input type="password" minlength="4" class="input-field" autocomplete="off" required>
-                                <label for="">Mật khẩu</label>
-                            </div>
+                    <div class="heading">
+                        <h2>Bắt đầu</h2>
+                        <h6>Bạn đã có tài khoản ?</h6>
+                        <a href="#" class="toggle">Đăng nhập</a>
+                    </div>
 
-                            <input type="submit" value="Đăng nhập" class="sign-btn btn">
-                            <a href="" class="text">Quên mật khẩu</a>
-                        </div>
-                    </form>
-                    <form action="index.html" autocomplete="off" class="sign-up-form">
-                        <div class="logo">
-                            <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/ava_v2.png" alt="">
-                        </div>
-
-                        <div class="heading">
-                            <h2>Bắt đầu</h2>
-                            <h6>Bạn đã có tài khoản ?</h6>
-                            <a href="#" class="sign-up">Đăng nhập</a>
+                    <div class="info-form">
+                        <div class="input-wrap">
+                            <input type="text" minlength="4" class="input-field" autocomplete="on" required>
+                            <label for="">Tên đăng nhập</label>
                         </div>
 
-                        <div class="info-form">
-                            <div class="input-wrap">
-                                <input type="text" minlength="4" class="input-field" autocomplete="off" required>
-                                <label for="">Tên đăng nhập</label>
-                            </div>
+                        <div class="input-wrap">
+                            <input type="tel" minlength="4" class="input-field" autocomplete="off" required>
+                            <label for="">Số điện thoại</label>
+                        </div>
 
-                            <div class="input-wrap">
-                                <input type="tel" minlength="4" class="input-field" autocomplete="off" required>
-                                <label for="">Số điện thoại</label>
-                            </div>
+                        <div class="input-wrap">
+                            <input type="password" minlength="4" class="input-field" autocomplete="off" required>
+                            <label for="">Mật khẩu</label>
+                        </div>
 
-                            <div class="input-wrap">
-                                <input type="password" minlength="4" class="input-field" autocomplete="off" required>
-                                <label for="">Mật khẩu</label>
-                            </div>
-
-                            <input type="submit" value="Đăng nhập" class="sign-btn btn">
-                    </form>
-                </div>
+                        <input type="submit" value="Đăng nhập" class="sign-btn btn">
+                </form>
             </div>
+  
+            <div class="block">
+            </div>
+          </div>
         </div>
-    </main>
+      </main>
 
     <!-- JavaScript Files -->
 
